
             • check for insufficient values in the data set and return
               ‘NULL’ (before the function crashed).

         • ‘plot_RLum.Analysis()’

             • All ‘...’ arguments can now be provided as ‘vector’ or
               ‘list’ to gain more control of the plot appearance,

             • argument ‘abline’ now works also in combination with
               ‘combine = TRUE’ and allows to set ablines independently
               over different plots (#260),

             • automatic axes labelling improved for ‘combine = TRUE’,

             • support further ‘...’ argument ‘legend’ (TRUE/FALSE).

         • ‘plot_RLum.Data.Curve()’

             • Fix seldom bug that causes unexpected function behaviour
               if ‘xlab’ or ‘ylab’ exist as objects on the global
               environment (#265).

         • ‘read_BIN2R()’

             • Handling of corrupt BIN-files improved, the functions
               tries to import whatever possible,

             • the argument ‘n.records’ was not respected under rare
               circumstances.

         • ‘Risoe.BINfileData2RLum.Analysis()’

             • Single grain data had not been converted correctly to
               ‘RLum.Analysis’ objects.  Each grain within a position
               should represent one ‘RLum.Analysis’ object with a set
               of curve. This was so far not the case; corrected,

             • significant performance improvements, especially for big
               Risoe.BINfileData2RLum.Analysis() objects.

  Internals:

         • New internal function ‘.create_UID()’ added to create the
           unique identifier for RLum-objects. The new function reduces
           significantly the overhead while producing the objects.

         • Package 'digits' removed from the dependency list and the
           functionality (creating a unique identifier for
           RLum-objects) was implemented using a self-written function.
