@@ -1416,11 +1416,11 @@
 </td>
 <td class=cellinside><br /> Import a *.bin or a *.binx file produced by a Risoe DA15 and DA20 TL/OSL<br /> reader into R.<br />
 </td>
-<td class=cellinside>0.12.2
+<td class=cellinside>0.12.3
 </td>
-<td class=cellinside>2016-02-14
+<td class=cellinside>2016-02-19
 </td>
-<td class=cellinside>16:26:04
+<td class=cellinside>15:50:04
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France), Margret C. Fuchs, HZDR Freiberg, (Germany)<br />  R Luminescence Package Team
@@ -1827,9 +1827,9 @@
 </td>
 <td class=cellinside>0.1.0
 </td>
-<td class=cellinside>2016-02-05
+<td class=cellinside>2016-02-19
 </td>
-<td class=cellinside>05:21:29
+<td class=cellinside>15:55:26
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
