@@ -1,5 +1,5 @@
 % latex table generated in R 3.2.3 by xtable 1.8-2 package
-% Thu Feb 18 12:28:09 2016
+% Fri Feb 19 15:57:46 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -137,7 +137,7 @@
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany), Sebastian Kreutzer, IRAMAT-CRP2A,$<$br /$>$ Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   72 & plot\_ViolinPlot & Create a violin plot & $<$br /$>$ Draws a kernal densiy plot in combination with a boxplot in its middle. The shape of the violin$<$br /$>$ is constructed using a mirrored density curve. This plot is especially designed for cases$<$br /$>$ where the individual errors are zero or to small to be visualised. The idea for this plot is$<$br /$>$ based on the the 'volcano plot' in the ggplot2 package by Hadely Wickham and Winston Chang.$<$br /$>$ The general idea for the Violin Plot seems to be introduced by Hintze and Nelson (1998).$<$br /$>$ & 0.1.0 & 2015-12-05 & 15:52:49
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
-  73 & read\_BIN2R & Import Risoe BIN-file into R & $<$br /$>$ Import a *.bin or a *.binx file produced by a Risoe DA15 and DA20 TL/OSL$<$br /$>$ reader into R.$<$br /$>$ & 0.12.2 & 2016-02-14 & 16:26:04
+  73 & read\_BIN2R & Import Risoe BIN-file into R & $<$br /$>$ Import a *.bin or a *.binx file produced by a Risoe DA15 and DA20 TL/OSL$<$br /$>$ reader into R.$<$br /$>$ & 0.12.3 & 2016-02-19 & 15:50:04
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Margret C. Fuchs, HZDR Freiberg, (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   74 & read\_Daybreak2R & Import Daybreak ASCII dato into R & $<$br /$>$ Import a *.txt (ASCII) file produced by a Daybreak reader into R.$<$br /$>$ & 0.2.1 & 2016-02-05 & 05:21:29
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)  Based on a suggestion by Willian Amidon and Andrew Louis Gorin.$<$br /$>$  R Luminescence Package Team \\ 
@@ -172,7 +172,7 @@
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   94 & use\_DRAC & Use DRAC to calculate dose rate data & $<$br /$>$ The function provides an interface from R to DRAC. An R-object or a$<$br /$>$ pre-formatted XLS/XLSX file is passed to the DRAC website and the$<$br /$>$ results are re-imported into R.$<$br /$>$ & 0.1.0 & 2015-12-05 & 15:52:49
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France), Michael Dietze,$<$br /$>$ GFZ Potsdam (Germany), Christoph Burow, University of Cologne (Germany) $<$br /$>$  R Luminescence Package Team \\ 
-  95 & verify\_SingleGrainData & Verify single grain data sets and check for invalid grains, i.e. zero light level grains & $<$br /$>$ This function tries to identify automatically zero light level curves (grains) from single grain data$<$br /$>$ measurements.  $<$br /$>$ & 0.1.0 & 2016-02-05 & 05:21:29
+  95 & verify\_SingleGrainData & Verify single grain data sets and check for invalid grains, i.e. zero light level grains & $<$br /$>$ This function tries to identify automatically zero light level curves (grains) from single grain data$<$br /$>$ measurements.  $<$br /$>$ & 0.1.0 & 2016-02-19 & 15:55:26
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   96 & write\_R2BIN & Export Risoe.BINfileData into Risoe BIN-file & $<$br /$>$ Exports a Risoe.BINfileData object in a *.bin or *.binx file that can be$<$br /$>$ opened by the Analyst software or other Risoe software.$<$br /$>$ & 0.3.2 & 2016-02-05 & 05:21:29
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
