@@ -57,7 +57,7 @@ Reg0 curves are likely to removed as well. Therefore it is strongly recommended 
 \code{cleanup = TRUE} carefully.
 }
 \section{Function version}{
- 0.1.0 (2016-02-05 05:21:29)
+ 0.1.0 (2016-02-19 15:55:26)
 }
 \examples{
 
